test/bad/1.cc
int main()
{
    int x, y, z;
    return 1; // Interpreter should forward program's exit code
}